--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,13 @@ lib64/
 parts/
 sdist/
 var/
-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+
+# Log files from ETL process
+*.log
+*.log.*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -43,7 +46,7 @@ htmlcov/
 .cache
 nosetests.xml
 coverage.xml
-*.cover
+*,cover
 .hypothesis/
 
 # Translations
@@ -62,12 +65,12 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/_build/
+doc/_build/
 
 # PyBuilder
 target/
 
-# Jupyter Notebook
+# IPython Notebook
 .ipynb_checkpoints
 
 # pyenv
@@ -76,26 +79,24 @@ target/
 # celery beat schedule file
 celerybeat-schedule
 
-# SageMath parsed files
-*.sage.py
-
 # dotenv
 .env
 
 # virtualenv
-.venv
 venv/
 ENV/
 
 # Spyder project settings
 .spyderproject
-.spyproject
 
 # Rope project settings
 .ropeproject
 
-# mkdocs documentation
-/site
+# .DS_Store
+.DS_Store
+**/.DS_Store
 
-# mypy
-.mypy_cache/
+# Images & Plots
+*.png
+*.jpg
+*.jpeg
