--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,11 @@
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = eco_connect/_version.py
+versionfile_build = eco_connect/_version.py
+tag_prefix = v
+parentdir_prefix = eco_connect-
+
 [tool:pytest]
 pep8ignore =
     E402
