--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,9 @@ pep8ignore =
     E123
 addopts = --pep8 --showlocals --durations=10
 testpaths = eco_connect tests
+
+[metadata]
+description-file = README.md
+
+[bdist_wheel]
+universal=1
