--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ parentdir_prefix = eco_connect-
 pep8ignore =
     E402
     E123
-addopts = --pep8 --showlocals --durations=10
+addopts = --showlocals --durations=10
 testpaths = eco_connect tests
 
 [metadata]
