--- a/setup.cfg
+++ b/setup.cfg
@@ -1,19 +1,5 @@
-[versioneer]
-VCS = git
-style = pep440
-versionfile_source = eco_connect/_version.py
-versionfile_build = eco_connect/_version.py
-tag_prefix = v
-parentdir_prefix = eco_connect-
-
-[tool:pytest]
-pep8ignore =
-    E402
-    E123
-addopts = --showlocals --durations=10
-testpaths = eco_connect tests
-
 [metadata]
+license_file = LICENSE
 description-file = README.md
 
 [bdist_wheel]
